src/objects/DOARegister__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipLabel>DOA Register</relationshipLabel>
        <relationshipName>DOARegisterAnswer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DCSsubDOA__c</fullName>
        <label>DCS sub-DOA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOAApprovalRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DOA Approval Request</label>
        <referenceTo>DOAApprovalRequest__c</referenceTo>
        <relationshipLabel>DOA Register</relationshipLabel>
        <relationshipName>DOA_Register</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DOATrigger__c</fullName>
        <label>DOA Trigger</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOA_Number__c</fullName>
        <formula>EnterpriseDOA__c</formula>
        <label>DOA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_Request_Status__c</fullName>
        <formula>IF(ISBLANK(TEXT(DOAApprovalRequest__r.ApprovalStatus__c)) || ISNULL(TEXT(DOAApprovalRequest__r.ApprovalStatus__c)), &apos;Not Started&apos;, TEXT(DOAApprovalRequest__r.ApprovalStatus__c))</formula>
        <label>DOA Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseDOA__c</fullName>
        <label>Enterprise DOA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexNumber__c</fullName>
        <description>Used exclusively for the RFA VF page</description>
        <label>Index Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>DOA Register</relationshipLabel>
        <relationshipName>DOARegister</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>DOA Register</relationshipLabel>
        <relationshipName>DOARegisterQuestionnaire</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedToRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Related To Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskTitle__c</fullName>
        <label>Risk Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Question</label>
        <referenceTo>TemplateQuestion__c</referenceTo>
        <relationshipLabel>DOA Register</relationshipLabel>
        <relationshipName>DOARegister</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DOA Register</label>
    <nameField>
        <displayFormat>DOA-{0}</displayFormat>
        <label>DOA Register Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DOA Register</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>